working on upgrading to newest version of ember

--- a/tests/dummy/app/styles/_variables.scss
+++ b/tests/dummy/app/styles/_variables.scss
@@ -7,7 +7,7 @@ $solid-coated-warm-grey: #e5dbd6;
 
 $body-bg: $seashell-white;
 
-@import "bootstrap/variables";
+//@import "node_modules/bootstrap/scss/bootstrap/variables";
 
 $side-nav-sm-columns: 3;
 $code-sm-columns: 8;
